fix edit notebook title alignment & update license

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -42,17 +42,17 @@
  */
 
 .new-paragraph{
-  text-align: center; 
+  text-align: center;
   height: 7px;
   margin: -7px 2px 0 2px;
   cursor: pointer;
 }
 
-.new-paragraph:hover{  
+.new-paragraph:hover{
   background: #d3e5ea;
 }
 
-.new-paragraph:hover .plus-sign{  
+.new-paragraph:hover .plus-sign{
   display: block;
 }
 
@@ -106,16 +106,17 @@
 
 .form-control2 {
   width: 100%;
-  margin-left: 15px;
+  height: 40px;
   font-size: 29px;
-  line-height: 1.42857143;
+  line-height: 1.2;
   color: #555;
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  padding: 0 2px;
+  padding: 7px 0;
+  margin: 2px 0 0 14px;
 }
 
 .form-control-static2 {
