--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -236,6 +236,7 @@
   font-size: 17px !important;
   font-weight: bold;
   padding: 0 2px;
+  margin-left: -3px;
 }
 
 /*
